V1 :
* Created project
* Added schema