@@ -1,3 +1,4 @@
 V1 :
 * Created project
 * Added schema
+* Added /directory route
